Refactor huge class as it isn't the Java way